<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".elements.ContactItem"
    android:background="#D1C3C3">

    <ImageView
        android:id="@+id/contact_item_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/contact_item_contact_view"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_item_display_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/contact_item_contact_name"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/contact_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_item_last_message"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/contact_item_last_message"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/contact_item_display_name"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/contact_item_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:text="@string/contact_item_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/contact_item_display_name"
        app:layout_constraintTop_toBottomOf="@+id/contact_item_last_message" />


</androidx.constraintlayout.widget.ConstraintLayout>